re PR rtl-optimization/21102 (ICE: in immed_double_const, on SSE2 intrinsics)

PR rtl-opt/21102
        * simplify-rtx.c (simplify_binary_operation): Fix mode check before
        performing some integral scalar simplifications.

From-SVN: r98628